--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "![Design preview for the Social media dashboard with theme switcher coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
+    "build": "gulp scssTask && gulp jsTask",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
